--- a/assets/css/_form.css
+++ b/assets/css/_form.css
@@ -1,6 +1,6 @@
 /* check button */
 .form-check-input:checked {
-  box-shadow: inset 0 0 0 4px #fff;
+  box-shadow: inset 0 0 0 0.25rem var(--white);
   background-color: var(--btn-primary-color);
   border-color: var(--btn-primary-color);
 }
@@ -8,28 +8,33 @@
 .form-check-input:checked[type="radio"] {
   --bs-form-check-bg-image: none;
 }
-
+.form-check-input.is-invalid:focus {
+  box-shadow: inset 0 0 0 0.25rem var(--white);
+}
 .form-check-input {
   width: 20px;
   height: 20px;
   background-color: var(--white);
   border: 2px solid var(--btn-primary-color);
   margin: 2px;
+  margin: 0;
+  cursor: pointer;
 }
-
 .form-check-label {
-  padding: 0.25rem;
-  padding-left: 0.5rem;
-  padding-right: 0.75rem;
   margin-bottom: 0;
   border-radius: 0.5rem;
   padding: 0;
+  padding-left: 0.5rem;
+  cursor: pointer;
 }
 .form-check {
   display: flex;
   align-items: center;
-  gap: 0.5rem;
+  flex-wrap: wrap;
   margin-bottom: 0;
+  padding-left: 21px;
+  cursor: pointer;
+  width: fit-content;
 }
 .form-check:not(:last-child) {
   margin-bottom: 0.5rem;
@@ -42,7 +47,7 @@
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
-  box-shadow: rgb(255, 255, 255) 0px 0px 0px 3px inset;
+  box-shadow: var(--white) 0px 0px 0px 3px inset;
 }
 
 /* .form-check-input:checked[type=checkbox] {
@@ -57,11 +62,59 @@
   width: 100%;
   appearance: none;
   background-color: var(--white);
+  font-weight: 400;
+  font-size: var(--font-size-body-2);
+  line-height: var(--line-height-body-2);
+  padding: 0 0.75rem;
+  border-radius: 0.5rem;
+  border: none;
+  box-shadow: inset 0 0 0 1px var(--border-primary-color);
 }
-
 .form-control:focus {
   background-color: var(--white);
   border: none;
   outline: 0;
-  box-shadow: 0 0 0 .125rem var(--btn-primary-color);
+  box-shadow: inset 0 0 0 .125rem var(--btn-primary-color);
+}
+
+/* Forms Validation */
+.form-label {
+  margin-bottom: 0.5rem;
+}
+.form-control::placeholder {
+  color: rgba(0, 0, 0, 0.35);
+}
+.form-control.is-invalid {
+  background-image: none;
+  box-shadow: inset 0 0 0 1px var(--danger-bg-color);
+}
+.form-control.is-invalid:focus {
+  box-shadow: inset 0 0 0 0.25rem var(--danger-border-color);
+}
+.invalid-feedback {
+  color: var(--danger-bg-color);
+  font-weight: 400;
+  font-size: var(--font-size-body-2);
+  line-height: var(--line-height-body-2);
+  margin-bottom: 0;
+  margin-top: 0.5rem;
+}
+.invalid-feedback:before {
+  content: var(--invalid-icon);
+  vertical-align: middle;
+  margin-right: 0.25rem;
+}
+
+.form-check-input.is-invalid ~ .form-check-label {
+  color: var(--danger-bg-color);
+}
+.form-check-input.is-invalid {
+  border-color: var(--danger-bg-color);
+}
+.form-check-input.is-invalid ~ .invalid-feedback {
+  display: block;
+  flex-grow: 1;
+  width: 100%;
+  margin-left: -21px;
+  margin-top: 0.75rem;
 }
