--- a/assets/css/_config.css
+++ b/assets/css/_config.css
@@ -37,15 +37,15 @@
   }
 }
 .nav-custom .nav-item .nav-link {
-  background-color: var(--nav-item-bg);
+  background-color: var(--nav-item-bg-hover);
   border-radius: 0.5rem;
   color: var(--bs-body-color);
-  padding-top: 14.4px;
-  padding-bottom: 14.4px;
+  padding: 1rem;
   min-height: 48px;
   display: flex;
   align-items: center;
   gap: 0.5rem;
+  border-radius: 0.5rem;
 }
 
 @media (min-width: 992px) {
@@ -54,9 +54,16 @@
     background-color: transparent;
   }
 }
-.nav-custom .nav-item .nav-link.active {
-  color: var(--btn-primary-color);
-  background-color: var(--nav-item-bg);
+.nav-custom .nav-item .nav-link:hover {
+  color: var(--text-link-color);
+  background-color: var(--nav-item-bg-hover);
+}
+.nav-custom .nav-item .nav-link:focus {
+  box-shadow: 0 0 0 .25rem var(--btn-primary-border-focus);
+}
+.nav-custom .nav-item .nav-link.active, .nav-custom .nav-item .nav-link:active {
+  color: var(--text-link-color);
+  background-color: var(--nav-item-bg-active);
 }
 .nav-custom .nav-item .nav-link.active span:not(.material-symbols-outlined) {
   font-weight: 700;
