--- a/assets/css/_form.css
+++ b/assets/css/_form.css
@@ -1,8 +1,17 @@
-/* check button */
+/* radio */
 .form-check-input:checked {
-  box-shadow: inset 0 0 0 0.25rem var(--white);
+  box-shadow: inset 0 0 0 3px var(--white);
   background-color: var(--btn-primary-color);
   border-color: var(--btn-primary-color);
+}
+.form-check:has(.form-check-input:focus) {
+  box-shadow: 0 0 0 .25rem var(--btn-primary-border-focus);
+  border-radius: 0.5rem;
+}
+.form-check-input:focus {
+  box-shadow: none;
+  border-color: var(--btn-primary-color);
+  background-color: var(--white);
 }
 
 .form-check-input:checked[type="radio"] {
@@ -32,7 +41,7 @@
   align-items: center;
   flex-wrap: wrap;
   margin-bottom: 0;
-  padding-left: 21px;
+  padding-left: 23px;
   cursor: pointer;
   width: fit-content;
 }
@@ -115,6 +124,6 @@
   display: block;
   flex-grow: 1;
   width: 100%;
-  margin-left: -21px;
+  margin-left: -23px;
   margin-top: 0.75rem;
 }
