--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,9 +1,10 @@
 @import '_variables.css';
-@import '_typography.css';
 @import '_main.css';
+@import '_typography.css';
 @import '_button.css';
 @import '_alert.css';
 @import '_toast.css';
+@import '_spinner.css';
 @import '_header.css';
 @import '_install.css';
 @import '_install-success.css';
