--- a/views/install/1-install.html
+++ b/views/install/1-install.html
@@ -62,21 +62,6 @@
             </div>
             <div class="offcanvas-body">
               <div class="offcanvas-container-top">
-                <a href="#" class="offcanvas-link d-lg-none">
-                  <div class="offcanvas-link__text">
-                    <span class="material-symbols-outlined" aria-hidden="true">
-                      help
-                    </span>
-                    <span>Ayuda</span>
-                  </div>
-                  <span
-                    class="material-symbols-outlined d-lg-none"
-                    aria-hidden="true"
-                  >
-                    chevron_right
-                  </span>
-                </a>
-                <hr />
                 <div class="dropdown">
                   <button
                     type="button"
@@ -121,7 +106,7 @@
     </header>
     <main>
       <section class="container">
-        <h1 class="my-4 h3">Instalación de Ozer en WhatsApp</h1>
+        <h1 class="main-title">Instalación de Ozer en WhatsApp</h1>
       </section>
 
       <section class="container">
@@ -147,7 +132,7 @@
             </div>
           </div>
           <div class="col-12 col-lg-6 install-section__item">
-            <div class="nav-sections mb-4">
+            <div class="nav-sections mb-3">
               <img src="../../img/android-51.svg" alt="Android" />
               <p class="h6 my-2">Instrucciones para teléfonos Android</p>
               <ol>
