--- a/assets/css/_config.css
+++ b/assets/css/_config.css
@@ -2,7 +2,7 @@
   background-color: rgba(255, 255, 255, 0.5);
   padding: 1.5rem;
   border-radius: 1.5rem;
-  margin-bottom: 1.5rem;
+  margin-bottom: 1rem;
 }
 .config-header,
 .form-bg {
@@ -59,9 +59,10 @@
   background-color: var(--nav-item-bg-hover);
 }
 .nav-custom .nav-item .nav-link:focus {
-  box-shadow: 0 0 0 .25rem var(--btn-primary-border-focus);
+  box-shadow: 0 0 0 0.25rem var(--btn-primary-border-focus);
 }
-.nav-custom .nav-item .nav-link.active, .nav-custom .nav-item .nav-link:active {
+.nav-custom .nav-item .nav-link.active,
+.nav-custom .nav-item .nav-link:active {
   color: var(--text-link-color);
   background-color: var(--nav-item-bg-active);
 }
