--- a/assets/css/_install-success.css
+++ b/assets/css/_install-success.css
@@ -1,13 +1,13 @@
 .ul-list-ozer {
   list-style-type: none;
   padding: 0;
-  margin-bottom: 1rem;
+  margin: 1.5rem 0;
 }
 
 .ul-list-ozer li:not(:last-child) {
-  margin-bottom: .5rem;
+  margin-bottom: 1rem;
 }
 
 .li-list-ozer {
-    display: flex;
+  display: flex;
 }
