--- a/assets/css/_main.css
+++ b/assets/css/_main.css
@@ -12,7 +12,10 @@ body {
   padding-right: 1rem;
   padding-left: 1rem;
 }
-
+.row {
+  margin-right: -1rem;
+  margin-left: -1rem;
+}
 @media (min-width: 992px) {
   .main-container {
     max-width: 1024px;
@@ -59,5 +62,11 @@ body {
   .padding-x-sm-none {
     padding-left: 0;
     padding-right: 0;
+  }
+}
+@media (min-width: 992px) {
+  .container {
+    max-width: 926px;
+    padding: 0;
   }
 }
