--- a/assets/css/_typography.css
+++ b/assets/css/_typography.css
@@ -91,3 +91,19 @@ small,
   line-height: 12px;
   text-transform: uppercase;
 }
+.main-title {
+  margin-bottom: 1.5rem;
+  margin-top: 1rem;
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 28.8px;
+}
+@media (min-width: 992px) {
+  .main-title {
+    margin-bottom: 1.5rem;
+    margin-top: 3rem;
+    font-weight: 400;
+    font-size: 32px;
+    line-height: 38.4px;
+  }
+}
