--- a/views/install/3-install-success.html
+++ b/views/install/3-install-success.html
@@ -1,157 +1,195 @@
 <!DOCTYPE html>
 <html lang="es">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Ozer</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Exo+2:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
+    <link href="../../assets/css/styles.css" rel="stylesheet" />
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Ozer</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
-  <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link
-    href="https://fonts.googleapis.com/css2?family=Exo+2:ital,wght@0,100..900;1,100..900&display=swap"
-    rel="stylesheet"
-  />
-  <link href="../../assets/css/styles.css" rel="stylesheet" />
-</head>
-
-<body>
-  <header>
-    <nav class="navbar">
-      <div class="container">
-        <a class="navbar-brand" href="#">
-          <img src="../../img/logo.svg" alt="Ozer.bot" />
-        </a>
-        <button class="navbar-toggler d-lg-none" type="button" data-bs-toggle="offcanvas"
-          data-bs-target="#offcanvasHeader" aria-controls="offcanvasHeader" aria-label="Menú">
-          <span class="material-symbols-outlined" aria-hidden="true">
-            menu
-          </span>
-        </button>
-        <div class="offcanvas-lg offcanvas-end" tabindex="-1" id="offcanvasHeader"
-          aria-labelledby="offcanvasHeaderLabel">
-          <div class="offcanvas-header">
-            <button type="button" class="btn-close" data-bs-dismiss="offcanvas" data-bs-target="#offcanvasHeader"
-              aria-label="Cerrar">
-              <span class="material-symbols-outlined" aria-hidden="true">
-                close
-              </span>
-            </button>
-          </div>
-          <div class="offcanvas-body">
-            <div class="offcanvas-container-top">
-              <a href="#" class="offcanvas-link d-lg-none">
-                <div class="offcanvas-link__text">
-                  <span class="material-symbols-outlined" aria-hidden="true">
-                    help
-                  </span>
-                  <span>Ayuda</span>
-                </div>
-                <span class="material-symbols-outlined d-lg-none" aria-hidden="true">
-                  chevron_right
+  <body>
+    <header>
+      <nav class="navbar">
+        <div class="container">
+          <a class="navbar-brand" href="#">
+            <img src="../../img/logo.svg" alt="Ozer.bot" />
+          </a>
+          <button
+            class="navbar-toggler d-lg-none"
+            type="button"
+            data-bs-toggle="offcanvas"
+            data-bs-target="#offcanvasHeader"
+            aria-controls="offcanvasHeader"
+            aria-label="Menú"
+          >
+            <span class="material-symbols-outlined" aria-hidden="true">
+              menu
+            </span>
+          </button>
+          <div
+            class="offcanvas-lg offcanvas-end"
+            tabindex="-1"
+            id="offcanvasHeader"
+            aria-labelledby="offcanvasHeaderLabel"
+          >
+            <div class="offcanvas-header">
+              <button
+                type="button"
+                class="btn-close"
+                data-bs-dismiss="offcanvas"
+                data-bs-target="#offcanvasHeader"
+                aria-label="Cerrar"
+              >
+                <span class="material-symbols-outlined" aria-hidden="true">
+                  close
                 </span>
-              </a>
-              <hr />
-              <div class="dropdown">
-                <button type="button" class="btn dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
-                  <div class="offcanvas-link__text">
-                    <span class="material-symbols-outlined d-lg-none" aria-hidden="true">
-                      language
+              </button>
+            </div>
+            <div class="offcanvas-body">
+              <div class="offcanvas-container-top">
+                <div class="dropdown">
+                  <button
+                    type="button"
+                    class="btn dropdown-toggle"
+                    data-bs-toggle="dropdown"
+                    aria-expanded="false"
+                  >
+                    <div class="offcanvas-link__text">
+                      <span
+                        class="material-symbols-outlined d-lg-none"
+                        aria-hidden="true"
+                      >
+                        language
+                      </span>
+                      <span>Español</span>
+                    </div>
+                    <span
+                      class="material-symbols-outlined btn-dropdown-icon"
+                      aria-hidden="true"
+                    >
+                      expand_more
                     </span>
-                    <span>Español</span>
-                  </div>
-                  <span class="material-symbols-outlined btn-dropdown-icon" aria-hidden="true">
-                    expand_more
+                  </button>
+                  <ul class="dropdown-menu">
+                    <li><button class="dropdown-item">English</button></li>
+                    <li><button class="dropdown-item">Deutsch</button></li>
+                  </ul>
+                </div>
+              </div>
+              <div class="offcanvas-container-bottom">
+                <button class="offcanvas-logout" aria-label="Cerrar sesión">
+                  <span class="d-lg-none">Cerrar sesión</span>
+                  <span class="material-symbols-outlined" aria-hidden="true">
+                    logout
                   </span>
                 </button>
-                <ul class="dropdown-menu">
-                  <li><button class="dropdown-item">English</button></li>
-                  <li><button class="dropdown-item">Deutsch</button></li>
-                </ul>
               </div>
             </div>
-            <div class="offcanvas-container-bottom">
-              <button class="offcanvas-logout" aria-label="Cerrar sesión">
-                <span class="d-lg-none">Cerrar sesión</span>
-                <span class="material-symbols-outlined" aria-hidden="true">
-                  logout
-                </span>
+          </div>
+        </div>
+      </nav>
+    </header>
+    <main>
+      <section class="container mt-2 mt-lg-4 pt-lg-2">
+        <div class="row">
+          <div class="col-12 mb-3">
+            <div class="nav-sections">
+              <h1 class="main-title m-0 mb-3">
+                <span class="d-block">🎉🎉🎉 </span>
+                <span>¡Felicidades, has conectado Ozer a WhatsApp!</span>
+              </h1>
+              <p class="mb-4 install-subtitle">
+                ¡Ya puedes probarlo! Pidele a un amigo o contacto que te envíe
+                un mensaje de voz para recibir tu primer transcripción
+              </p>
+              <button type="button" class="btn btn-lg btn-primary">
+                Probar Ozer en WhatsApp
               </button>
             </div>
           </div>
         </div>
-      </div>
-    </nav>
-  </header>
-  <main>
-    <section class="container">
-      <div class="row">
-        <div class="col-12 nav-sections mb-4">
-          <h1 class="h3">🎉🎉🎉 ¡Felicidades, has conectado Ozer a WhatsApp!</h1>
-          <p>¡Ya puedes probarlo! Pidele a un amigo o contacto que te envíe un mensaje de voz para recibir tu primer
-            transcripción</p>
-          <button type="button" class="btn btn-lg btn-primary">
-            Probar Ozer en WhatsApp
-          </button>
+        <div class="row">
+          <div class="col-12 col-lg-6 mb-3 mb-lg-0 text-secondary">
+            <div class="nav-sections">
+              <h2 class="h5">¿Cómo funciona Ozer?</h2>
+              <ul class="ul-list-ozer">
+                <li class="li-list-ozer">
+                  <span class="material-symbols-outlined me-2"> person </span>
+                  <span
+                    >Los <strong>mensajes de contactos</strong> se van a
+                    transcribir en el mismo chat</span
+                  >
+                </li>
+                <li class="li-list-ozer">
+                  <span class="material-symbols-outlined me-2"> groups </span>
+                  <span
+                    >Los <strong>mensajes de grupos</strong> por el momento no
+                    se van a transcribir</span
+                  >
+                </li>
+              </ul>
+              <button type="button" class="btn btn-lg btn-outline-primary">
+                Cambiar configuración
+              </button>
+            </div>
+          </div>
+          <div class="col-12 col-lg-6 text-secondary mb-5 mb-lg-0">
+            <div class="nav-sections">
+              <h2 class="h5">Comandos de escritura</h2>
+              <ul class="ul-list-ozer">
+                <li class="li-list-ozer">
+                  <span class="material-symbols-outlined me-2">
+                    keyboard_command_key
+                  </span>
+                  <span>
+                    Escribe “<strong>ozer off</strong>” en el chat de un
+                    contacto o grupo para apagar las transcripciones
+                  </span>
+                </li>
+                <li class="li-list-ozer">
+                  <span class="material-symbols-outlined me-2">
+                    keyboard_command_key
+                  </span>
+                  <span>
+                    Escribe “<strong>ozer off</strong>” en el chat de un
+                    contacto o grupo para apagar las transcripciones
+                  </span>
+                </li>
+              </ul>
+              <button type="button" class="btn btn-lg btn-outline-primary">
+                Probar comandos
+              </button>
+            </div>
+          </div>
         </div>
-      </div>
-      <div class="row">
-        <div class="col-12 col-lg-6 nav-sections mb-4 text-secondary">
-          <h2 class="my-2 h4">¿Cómo funciona Ozer?</h2>
-          <ul class="ul-list-ozer">
-            <li class="li-list-ozer">
-              <span class="material-symbols-outlined  me-2">
-                person
-              </span>
-              <span>Los <strong>mensajes de contactos</strong> se van a transcribir en el mismo chat</span>
-            </li>
-            <li class="li-list-ozer">
-              <span class="material-symbols-outlined  me-2">
-                groups
-              </span>
-              <span>Los <strong>mensajes de grupos</strong> por el momento no se van a transcribir</span>
-            </li>
-          </ul>
-          <button type="button" class="btn btn-lg btn-outline-primary">
-            Cambiar configuración
-          </button>
-        </div>
-        <div class="col-12 col-lg-6 nav-sections text-secondary">
-          <h2 class="my-2 h4">¿Cómo funciona Ozer?</h2>
-          <ul class="ul-list-ozer">
-            <li class="li-list-ozer">
-              <span class="material-symbols-outlined me-2">
-                keyboard_command_key
-              </span>
-              <span>
-                Escribe “<strong>ozer off</strong>” en el chat de un contacto o grupo para apagar las transcripciones
-              </span>
-            </li>
-            <li class="li-list-ozer">
-              <span class="material-symbols-outlined  me-2">
-                keyboard_command_key
-              </span>
-              <span>
-                Escribe “<strong>ozer off</strong>” en el chat de un contacto o grupo para apagar las transcripciones
-              </span>
-            </li>
-          </ul>
-          <button type="button" class="btn btn-lg btn-outline-primary">
-            Probar comandos
-          </button>
-        </div>
-      </div>
-    </section>
-  </main>
+      </section>
+    </main>
 
-  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
-    integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
-    crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
-    integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
-    crossorigin="anonymous"></script>
-</body>
-
+    <script
+      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+      integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
+      integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
