--- a/views/sections/1-commands.html
+++ b/views/sections/1-commands.html
@@ -135,7 +135,7 @@
       </nav>
     </header>
     <main class="main-container">
-      <section class="container my-4">
+      <section class="container my-4 mt-3 mt-lg-4 sections-custom-width">
         <a
           href="#"
           class="d-flex align-items-center gap-1 text-decoration-none mb-2"
@@ -148,10 +148,10 @@
         <h1 class="mb-0 h4">Comandos de escritura para WhatsApp</h1>
       </section>
 
-      <section class="container">
+      <section class="container sections-custom-width">
         <div class="row install-section">
-          <div class="col-12 col-lg-4 install-section__item">
-            <div class="nav-sections mb-4">
+          <div class="col-12 col-lg-6 install-section__item">
+            <div class="sections-box">
               <span class="material-symbols-outlined" aria-hidden="true">
                 keyboard_command_key
               </span>
@@ -162,8 +162,8 @@
               </p>
             </div>
           </div>
-          <div class="col-12 col-lg-4 install-section__item">
-            <div class="nav-sections mb-4">
+          <div class="col-12 col-lg-6 install-section__item">
+            <div class="sections-box">
               <span class="material-symbols-outlined" aria-hidden="true">
                 keyboard_command_key
               </span>
