--- a/views/sections/2-help.html
+++ b/views/sections/2-help.html
@@ -135,7 +135,7 @@
       </nav>
     </header>
     <main class="main-container">
-      <section class="container my-4">
+      <section class="container my-4 mt-3 mt-lg-4 sections-custom-width">
         <a
           href="#"
           class="d-flex align-items-center gap-1 text-decoration-none mb-2"
@@ -148,28 +148,28 @@
         <h1 class="mb-0 h4">Ayuda</h1>
       </section>
 
-      <section class="container">
+      <section class="container sections-custom-width">
         <div class="row install-section">
-          <div class="col-12 col-lg-8 install-section__item mb-2 mb-lg-3">
-            <div class="nav-sections mb-4">
+          <div class="col-12 install-section__item">
+            <div class="sections-box br-lg-24 mb-3">
               <h2 class="mb-0 h5">Tips</h2>
-              <hr class="nav-sections__divisor custom-margin" />
+              <hr class="sections-box__divisor custom-margin" />
               <p class="h6 mb-2">Configuración general</p>
               <p class="text-secondary mb-0">
                 Ozer puede transcribir los mensajes de audio de contactos y
                 grupos. En la <a href="#">configuración general</a> se puede
                 elegir si se transcriben en el mismo chat o en un chat privado.
               </p>
-              <hr class="nav-sections__divisor" />
+              <hr class="sections-box__divisor" />
               <p class="h6 mb-2">Configuración de contactos y grupos</p>
-              <p class="text-secondary mb-1">
+              <p class="text-secondary mb-2">
                 La forma de recibir las transcripciones se puede cambiar
                 individualmente por cada contacto y cada grupo.
               </p>
               <p class="mb-0">
                 <a
                   href="#"
-                  class="mb-1 d-flex align-items-center gap-1 text-decoration-none"
+                  class="mb-2 d-flex align-items-center gap-1 text-decoration-none"
                 >
                   <span class="text-decoration-underline"
                     >Configuración de contactos</span
@@ -200,10 +200,10 @@
               </p>
             </div>
           </div>
-          <div class="col-12 col-lg-8 install-section__item mb-2 mb-lg-3">
-            <div class="nav-sections mb-4">
+          <div class="col-12 install-section__item">
+            <div class="sections-box br-lg-24 mb-3">
               <h2 class="mb-0 h5">Pausar transcripciones</h2>
-              <hr class="nav-sections__divisor custom-margin" />
+              <hr class="sections-box__divisor custom-margin" />
               <p class="mb-3">
                 ¿Quieres dejar de recibir todas las transcripciones?
               </p>
@@ -253,18 +253,18 @@
               </div>
             </div>
           </div>
-          <div class="col-12 col-lg-8 install-section__item mb-2 mb-lg-3">
-            <div class="nav-sections mb-4">
+          <div class="col-12 install-section__item">
+            <div class="sections-box br-lg-24 mb-3">
               <h2 class="mb-0 h5">Reconectar</h2>
-              <hr class="nav-sections__divisor custom-margin" />
+              <hr class="sections-box__divisor custom-margin" />
               <p class="mb-3">¿No estás recibiendo las transcripciones?</p>
               <button class="btn btn-lg btn-outline-primary">Reconectar</button>
             </div>
           </div>
-          <div class="col-12 col-lg-8 install-section__item mb-2 mb-lg-3">
-            <div class="nav-sections mb-4">
+          <div class="col-12 install-section__item mb-4 mb-lg-5">
+            <div class="sections-box br-lg-24 mb-3">
               <h2 class="mb-0 h5">Soporte</h2>
-              <hr class="nav-sections__divisor custom-margin" />
+              <hr class="sections-box__divisor custom-margin" />
               <p class="mb-3">
                 Si nos quieres contactar con alguna pregunta puedes hacerlo a
                 través de un correo electrónico a <strong>info@ozer.bot</strong>
